# MemLedgerBench

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark_matrix.json
data/fixtures/: README.md  tiny_social.json
docs/: adapter_protocol.md  baseline_results.md  benchmark_spec.md  competitive_audit.md  dataset_card.md  example-results.md  privacy_threat_model.md  release_audit.md  run-the-benchmark.md  sealed-runner.md
examples/: cognee_adapter.py  mem0_adapter.py  unsafe_jsonl_adapter.py
results/: README.md
src/mem_ledger_bench/: __init__.py  cli.py  dataset.py  generator.py  runner.py
src/social_memory_bench/: __init__.py  adapters.py  cli.py  dataset.py  generator.py  locomo.py  policy.py  runner.py  scoring.py  suite.py  text.py
tests/: test_dataset.py  test_e2e.py  test_locomo.py  test_policy.py  test_scoring.py  test_sealed.py  test_suite.py
