[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mem-ledger-bench"
version = "0.2.0"
description = "A permission-aware lifecycle conformance harness for social-agent memory systems"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MemLedgerBench contributors" }]
license = "Apache-2.0"
license-files = ["LICENSE", "data/LICENSE"]
dependencies = []

[project.scripts]
mem-ledger-bench = "mem_ledger_bench.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
